--- a/packages/frontend/index.html
+++ b/packages/frontend/index.html
@@ -1,14 +1,18 @@
 <!doctype html>
 <html lang="">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script defer data-domain="jaapjunior.nl" src="https://plausible.io/js/script.js"></script>
-    <title>Jaap Junior</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.ts"></script>
-  </body>
+	<head>
+		<meta charset="UTF-8" />
+		<link rel="icon" href="/favicon.ico" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<script
+			defer
+			data-domain="jaapjunior.nl"
+			src="https://plausible.io/js/script.js"
+		></script>
+		<title>Jaap Junior</title>
+	</head>
+	<body>
+		<div id="app"></div>
+		<script type="module" src="/src/main.ts"></script>
+	</body>
 </html>
